src/objects/VPM_PurchasingRequests__c.object
<CustomObject>
    <description>VPM - Used to store the data to allow an end user to make a Vendor Request that is reassigned to and approved by teams like FLS, Finance, Procurement and MDM Ops. This could branch out to a Vendor Request interfaced with SAP.</description>
    <fields>
        <fullName>VPM_ABCIndicator__c</fullName>
        <description>VPM - This field is used to store the value of the ABC Indicator.</description>
        <label>ABC Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AbortReason__c</fullName>
        <description>VPM - This field is used to store the Abort Reason when the record is aborted.</description>
        <label>Abort Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AbortTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of &quot;Are you Sure&quot; checkbox when the record is Aborted.</description>
        <label>Are you sure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_AccNumOfAlternativePayee__c</fullName>
        <description>VPM - This field is used to store the value of the Account Number if in case there is an alternate Payee.</description>
        <label>Account Number of the Alternative Payee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AccntWithVendor__c</fullName>
        <description>VPM - This field is used to store the value of Account with Vendor.</description>
        <label>Account with Vendor</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AccountClerkTelephoneNumber__c</fullName>
        <description>VPM - This field is used to store the Account Clerk Telephone Number.</description>
        <label>Account Clerk Telephone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AccountGroup__c</fullName>
        <defaultValue>&quot;G001&quot;</defaultValue>
        <description>VPM - Account Group - Works with Trade Partner Type to Define ECC Account Group</description>
        <label>Account Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AccountHolderName__c</fullName>
        <description>VPM - Captures the Account Holder Name Which is linked to the Vendor.</description>
        <label>Account Holder Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AccountMemo__c</fullName>
        <description>VPM - This field is used to store the value of Account Memo.</description>
        <label>Account Memo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AccountStatement__c</fullName>
        <description>VPM - This field is used to store the value of Account Statement of the vendor.</description>
        <label>Account Statement</label>
        <picklist>
            <picklistValues>
                <fullName>open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_AccountingClerk__c</fullName>
        <description>VPM - This field is used to store the value of Accounting Clerk.</description>
        <label>Accounting Clerk</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AccountingNote__c</fullName>
        <description>VPM - This field is used to store the value of Accounting Note.</description>
        <label>Accounting Note</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AccountingText__c</fullName>
        <description>VPM - This field is used to store the value of Accounting Text.</description>
        <label>Accounting Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AchillesExceptionDetails__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>VPM - Used to populate fields in SAP BPM used for Procurement audit. Requested to be defaulted to &apos;N/A&apos; at all times so the integration with SAP BPM can create a record successfully..</description>
        <label>Exception Details</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AchillesRegistrationCode__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>VPM - specifies the Achilles Registration Code.</description>
        <label>Achilles Registration Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ActualQMSystem__c</fullName>
        <description>VPM - This field is used to store the value of Actual QM System.</description>
        <label>Actual QM System</label>
        <picklist>
            <picklistValues>
                <fullName>1080_ISO 9001, w/out cert., audit score &gt;80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099_ISO 9001, w/out cert., audit score &gt;99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1180_ISO 9001, w/ cert., audit score &gt;80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1199_ISO 9001, w/ cert., audit score &gt;99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1299_ISO 9001, with cert., skip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2080_ISO 9002, w/out cert., audit score &gt;80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2099_ISO 9002, w/out cert., audit score &gt;99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2180_ISO 9002, w/ cert., audit score &gt;80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2199_ISO 9002, w/ cert., audit score &gt;99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2299_ISO 9002, with cert., skip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3080_ISO 9003, w/out cert., audit score &gt;80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3099_ISO 9003, w/out cert., audit score &gt;99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3180_ISO 9003, w/ cert., audit score &gt;80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3199_ISO 9003, w/ cert., audit score &gt;99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3299_ISO 9003 , with cert., skip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_AddressForm__c</fullName>
        <description>VPM - This field is used to store the value of Form of Address.</description>
        <label>Form of Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AddressTimeZone__c</fullName>
        <description>VPM - This field is used to store the value of Address Time Zone to which the vendor belongs.</description>
        <label>Address Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHAN_Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALA_Alaska (Anchorage)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAW_Alaska (Aleutian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AST_Atlantic Time (Halifax)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSACT_Australia Capital Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSLHI_Australia Lord Howe Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSNSW_Australia New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSNT_Australia Northern Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSQLD_Australia Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSSA_Australia South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTAS_Australia Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSVIC_Australia Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSWA_Australia Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZOREN_Europe Azores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL_Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRZLAN_Brazil Andes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRZLEA_Brazil East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRZLWE_Brazil West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT_Central Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CET_Central Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHILE_Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHILEE_Chile Easter Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST_Central Time (Dallas)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSTNO_Central Time No DST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYPRUS_Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EET_Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGYPT_Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST_Eastern Time (New York)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESTNO_Eastern Time (Indianapolis)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST__Eastern Time (Montréal)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_AdoptScanDate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of Adopt Scan Date.</description>
        <label>Adopt Scan Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_AdvancedFormSubmittedTime__c</fullName>
        <description>VPM- Time when the advanced form is submitted for approval</description>
        <label>Advanced Form Submitted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VPM_AdvancedFormSubmitted__c</fullName>
        <description>VPM - System field to record when the FLS have submitted their additions to the request. Used by Process Builder to drive status change, approvals and reassignment</description>
        <label>Advanced Form Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_AdvancedFormSubmitter__c</fullName>
        <description>VPM - Need to record the permission set of the user who submitted the Advanced form; this needs to be written in to a field called Advanced Form Submitter.</description>
        <label>Advanced Form Submitter</label>
        <picklist>
            <picklistValues>
                <fullName>Business Requestor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_AlreadyAvailableSupplierUse__c</fullName>
        <description>VPM - This field to track Why can&apos;t an already available supplier be used?</description>
        <label>Why can&apos;t an Existing Supplier be used?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VPM_AlternateVendorNum__c</fullName>
        <description>VPM - This field is used to store the Alternate Vendor Phone Number.</description>
        <label>Alternate Vendor Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AlternativePayeeAccountNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of Indicator:Alt Payee using Account Number.</description>
        <label>Indicator:Alt Payee using Account Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_AlternativePayee__c</fullName>
        <description>VPM - This field is used to store the Alternative Payee name.</description>
        <label>Alternative Payee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ApprovalStatus__c</fullName>
        <description>VPM - This field is used to store the different statuses/stages of the Approval Flow.</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_ApprovalSubmitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPM - Used to keep initial submitter ID.</description>
        <label>Approval Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPM_ApprovalWorkerID__c</fullName>
        <description>VPM - Used to store the values on click of &apos;I am working on it&apos; button.</description>
        <label>Approval Worker ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ApprovalWorker__c</fullName>
        <description>VPM - Used to store values on click of &apos;I am working on this&apos; button.</description>
        <label>Approval Worker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ApprovalsCompleted__c</fullName>
        <description>VPM - System field used to record whether the Approval Processes from Procurement and Finance are completed so statuses and record reassignment changes can be handled by Process Builder.</description>
        <label>Approvals Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_Approver10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPM - This field stores the Approver 10 value for the vendor request.</description>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Requests_10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPM_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPM - This field stores the Approver 1 value for the vendor request.</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Requests_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPM_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPM - This field stores the Approver 2 value for the vendor request.</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Requests_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPM_ArabiaOldNumber__c</fullName>
        <description>VPM - This field is used to store the value of Arabia Old Number.</description>
        <label>Arabia Old Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AuthorisationGroupFormula__c</fullName>
        <description>VPM - This field is used to store the value of Authorisation Group Formula field.</description>
        <formula>TEXT(VPM_Commodity__r.VPM_AuthorisationGroup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorisation Group Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Authorization__c</fullName>
        <description>VPM - This field is used to store the value of  Authorization.</description>
        <label>Authorization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_AutoEvalGRSetmtRet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of Auto Eval GR Setmt Ret.</description>
        <label>Auto Eval GR Setmt Ret</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_AutomaticPurchaseOrderGeneration__c</fullName>
        <defaultValue>true</defaultValue>
        <description>VPM - This field is used to store the value of AutoGeneration of Purchase Order Allowed.</description>
        <label>AutoGeneration of Purchase Order Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_BExchangeLimit__c</fullName>
        <description>VPM - This field is used to store the value of B/Exchange Limit.</description>
        <label>B/Exchange Limit</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_BankAccountNumber__c</fullName>
        <description>VPM - Captures the Account Number of the Bank Account Which is linked to this Vendor.</description>
        <label>Bank Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BankControlKey__c</fullName>
        <description>VPM - This field is used to store the value of Bank Control Key linked to the Bank Account Number of the Vendor.</description>
        <label>Bank Control Key</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BankCountryKey__c</fullName>
        <description>VPM - This field is used to store the value of Bank Country Key linked to the Bank Account Number of the Vendor.</description>
        <label>Bank Country Key</label>
        <picklist>
            <picklistValues>
                <fullName>AD_Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE_Utd.Arab Emir (UAE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF_Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG_Antigua/Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL_Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM_Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN_Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO_Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ_Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS_Samoa, American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT_Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU_Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW_Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ_Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA_Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB_Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE_Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF_Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG_Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH_Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ_Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM_Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN_Brunei Dar-es-S (Brunei Daruss)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO_Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ_Bon+Statia+Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR_Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_BankDataValidationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - Check box used to determine whether Bank Data Validation  Required  Set, if necessary in Purchasing Request Advanced Form Flow.</description>
        <label>Bank Data Validation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_BankDataValidationSubmitted__c</fullName>
        <description>VPM - System field used to record that Bank Data Validation have finished with their changes to the form details. This field triggers Process Builder to handle other elements of the process. Not integrated with SAP.</description>
        <label>Bank Data Validation Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_BankDetailsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - set to true when the bank details section is changed on advanced form</description>
        <label>Bank Details Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_BankDetailsChanges__c</fullName>
        <description>Used to record the updates to bank details fields for posting on Chatter group</description>
        <label>Bank Details Changes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VPM_BankDetailsScreen__c</fullName>
        <description>VPM - This field is used to display the title at the top left hand corner of the section.</description>
        <label>Bank DetailsScreen</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BankKey__c</fullName>
        <description>VPM - This field is used to store the value of Bank Key associated with the Vendor Account Number.</description>
        <label>Bank Key</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BankName__c</fullName>
        <description>VPM - This field is used to store the Name of the Vendor&apos;s Bank.</description>
        <label>Bank Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BankNumber__c</fullName>
        <description>VPM - This field is used to store the value of Bank Number associated with the Vendor Bank Account Number.</description>
        <label>Bank Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BankValidatorApproval__c</fullName>
        <description>VPM- Time when the bank Validator approves the request.</description>
        <label>Bank Validator Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VPM_BankValidatorReworks__c</fullName>
        <defaultValue>0</defaultValue>
        <description>VPM - Number of times Bank Validator Requests rework.</description>
        <label>Bank Validator Reworks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_BeneficiaryAddress1__c</fullName>
        <description>VPM - This field is used to store the value of Beneficiary Address 1.</description>
        <label>Beneficiary Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BeneficiaryAddress2__c</fullName>
        <description>VPM - This field is used to store the value of Beneficiary Address 2.</description>
        <label>Beneficiary Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BeneficiaryAddress3__c</fullName>
        <description>VPM - This field is used to store the value of Beneficiary Address 3.</description>
        <label>Beneficiary Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BeneficiaryCountry__c</fullName>
        <description>VPM - This field is used to store the value of Beneficiary Country.</description>
        <label>Beneficiary Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD_Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE_Utd.Arab Emir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF_Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG_Antigua/Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL_Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM_Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN_Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO_Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ_Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS_Samoa, America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT_Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU_Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW_Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ_Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA_Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB_Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE_Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF_Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG_Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH_Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ_Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM_Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN_Brunei Daruss.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO_Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR_Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS_Bahamas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_BeneficiaryName__c</fullName>
        <description>VPM - This field is used to store the Name of the Beneficiary.</description>
        <label>Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BlockFunction__c</fullName>
        <description>VPM - This field is used to store the value of Block Vendors.</description>
        <label>Block Function</label>
        <picklist>
            <picklistValues>
                <fullName>01_Block purchase order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02_Block quot. request and purchase order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_Block quot. req., order, goods receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_Block source determination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99_Total block</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_Blocked_Status__c</fullName>
        <description>VPM - Field to hold the status of vendor block.</description>
        <label>Blocked Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_BusinessRequestorSubmitted__c</fullName>
        <description>VPM - System field used to record whether the Business Requestor has submitted the request so Process Builder can take care of the status and reassignment changes</description>
        <label>Business Requestor Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_Bypass__c</fullName>
        <description>VPM - Used to record whether the invoice has been received prior to the Vendor request</description>
        <label>Bypass</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_CENVAT__c</fullName>
        <description>VPM - This field is used to store the value of CENVAT.</description>
        <label>CENVAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>